RESOLVED FIXED275469
Crash under RenderObject::createVisiblePosition() while dragging the volume scrubber on a video player
https://bugs.webkit.org/show_bug.cgi?id=275469
Summary Crash under RenderObject::createVisiblePosition() while dragging the volume s...
alan
Reported 2024-06-13 20:53:41 PDT
Attachments
[fast-cq]Patch (1.85 KB, patch)
2024-06-13 21:15 PDT, alan
no flags
alan
Comment 1 2024-06-13 21:15:17 PDT
Created attachment 471672 [details] [fast-cq]Patch
EWS
Comment 2 2024-06-14 07:51:00 PDT
Committed 280013@main (883886ee70ad): <https://commits.webkit.org/280013@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471672 [details].
Note You need to log in before you can comment on or make changes to this bug.